# UOttaHack

./: .gitignore  .vercelignore  DESIGN_THEME.md  FEEDBACK_ARCHITECTURE.md  FIX_SCOPES.md  LMS_PROFESSIONAL_REDESIGN.md  QUICK_START_SURVEYMONKEY.md  README.md  REDESIGN_SUMMARY.md  S3_SETUP.md  SENTRY_SETUP.md  SOLACE_CONFIG_CHECK.md  SOLACE_CONSOLE_SETUP.md  SOLACE_IMPLEMENTATION_SUMMARY.md  SOLACE_SETUP.md  SURVEYMONKEY_CUSTOM_VARIABLES.md  SURVEYMONKEY_SETUP.md  VERCEL_DEPLOYMENT.md  VISUAL_DESIGN_REFERENCE.md  package-lock.json  package.json  vercel.json  vite.config.js
api/: index.js
sam_service/: .dockerignore  CMakeLists.txt  Dockerfile.vitals  Dockerfile.vitals.build  README.md  bridge_api.py  build_from_clone.sh  build_presage_macos.sh  build_sdk_in_docker.sh  build_sdk_simple.sh  build_wrapper.sh  build_wrapper_cmake.sh  build_wrapper_swift.sh  custom_metrics_processor.py  docker-compose.vitals.yml  docker-entrypoint.sh  eye_tracker.py  eye_tracker_simple.py  heart_rate_monitor.py  presage_bridge.cpp  presage_bridge.h  presage_wrapper.cpp  presage_wrapper.swift  quick_start_presage.sh  requirements.txt  sentry_helper.py  start.sh  test_presage_setup.sh  vitals_service.py
sam_service/agents/: backboard_service.py  image_agent.py  multi_model_agent.py  orchestrator_agent.py  quiz_agent.py  script_agent.py  speech_agent.py
sam_service/config/: sac_config.yaml
scripts/: create-developer-user.js  generate-developer-json.js  setup-surveymonkey.js
server/: index.js
server/models/: AgentPerformance.js  Class.js  Enrollment.js  SessionFeedback.js  StudentGroup.js  StudentTaskSession.js  Task.js  User.js
server/routes/: analyticsRoutes.js  classRoutes.js  insightsRoutes.js  metricRoutes.js  taskRoutes.js  userRoutes.js  videoRoutes.js
server/services/: agentSelectionService.js  aiRouterService.js  backboardService.js  elevenLabsService.js  feedbackAlertService.js  feedbackNormalizerService.js  groupingService.js  imageGenerationService.js  modelRecommendationService.js  openRouterService.js  promptAdaptationService.js  quizGenerationService.js  solaceService.js  surveyMonkeyService.js  teacherInsightsService.js  vitalsService.js
src/: App.css  App.jsx  index.css
src/components/: AddStudentModal.jsx  AuthForm.css  AuthForm.jsx  ClassDetail.css  ClassDetail.jsx  CodeIssues.jsx  CreateClassModal.css  CreateClassModal.jsx  CreateTaskModal.css  CreateTaskModal.jsx  Dashboard.css  Dashboard.jsx  DeveloperAnalytics.css  DeveloperAnalytics.jsx  DeveloperAnalytics_old.jsx  EducatorHomepage.css  EducatorHomepage.jsx  Homepage.css  Homepage.jsx  JoinClassModal.jsx  ProtectedRoute.jsx  RoleSelection.css  RoleSelection.jsx  TaskViewModal.css  TaskViewModal.jsx
